--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mistral-ui",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "Tailwind CSS + Alpine.js components",
   "main": "index.js",
   "type": "module",
@@ -10,6 +10,10 @@
     ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zraly/mistral-ui.git"
   },
   "author": "Jiří Zralý",
   "license": "MIT",
