--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "mistral-ui",
-  "version": "1.2.5",
+  "version": "1.2.8",
   "description": "Tailwind CSS + Alpine.js components",
   "main": "index.js",
   "type": "module",
   "files": [
     "index.js",
     "components"
-    ],
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "esbuild index.js --bundle --minify --outfile=dist/cdn.min.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,6 @@
   "author": "Jiří Zralý",
   "license": "MIT",
   "devDependencies": {
+    "esbuild": "^0.14.42"
   }
 }
